--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           uses: actions/checkout@v5
 
         - name: Setup Node.js
-          uses: actions@setup-node@v3
+          uses: actions/setup-node@v3
           with:
             node-version: '18'
 
@@ -38,6 +38,7 @@ jobs:
             node seedTaskData.js
    test:
      runs-on: ubuntu-latest
+     needs: mongo-init
 
      steps:
        - name: CheckOut Repository
@@ -50,7 +51,9 @@ jobs:
 
       
        - name: Install Depedencies for ./backend
+         working-directory: ./backend
          run: npm install
 
        - name: running backend Tests
+         working-directory: ./backend
          run: npm test
