--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,18 +24,18 @@ jobs:
             node-version: '18'
 
         - name: waiting for mongodb to be ready
-          run:
+          run: |
             until nc -z localhost 27017; do
               echo "waiting for mongodb.."
               sleep 2
             done
-              echo "mongodb is up"
+            echo "mongodb is up"
           
         - name: seed mongodb
           working-directory: ./backend
           run: |
             npm install
-            node seedTaskData.js
+            node seedTasksData.js
    test:
      runs-on: ubuntu-latest
      needs: mongo-init
@@ -45,12 +45,12 @@ jobs:
          uses: actions/checkout@v3
 
        - name: Setup Node.js
-         uses: action/setup-node@v3
+         uses: actions/setup-node@v3
          with:
            node-version: '18'
 
       
-       - name: Install Depedencies for ./backend
+       - name: Install Dependencies for backend
          working-directory: ./backend
          run: npm install
 
