--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
      runs-on: ubuntu-latest
      needs: mongo-init
 
+     env:
+       PORT: ${{ secrets.PORT }}
+       MONGO_URI: ${{ secrets.MONGO_URI }}
+       JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
      steps:
        - name: CheckOut Repository
          uses: actions/checkout@v3
