--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ jobs:
    mongo-init:
      runs-on: ubuntu-latest  
 
+     env:
+       PORT: ${{ secrets.PORT }}
+       MONGO_URI: ${{ secrets.MONGO_URI }}
+       JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
      services:
       mongo:
        image: mongo
@@ -36,29 +41,29 @@ jobs:
           run: |
             npm install
             node seedTasksData.js
-   test:
-     runs-on: ubuntu-latest
-     needs: mongo-init
 
-     env:
-       PORT: ${{ secrets.PORT }}
-       MONGO_URI: ${{ secrets.MONGO_URI }}
-       JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        - name: running backend Tests
+          working-directory: ./backend
+          run: npm test
+  
+  #  test:
+  #    runs-on: ubuntu-latest
+  #    needs: mongo-init
 
-     steps:
-       - name: CheckOut Repository
-         uses: actions/checkout@v3
+    
 
-       - name: Setup Node.js
-         uses: actions/setup-node@v3
-         with:
-           node-version: '18'
+  #    steps:
+  #      - name: CheckOut Repository
+  #        uses: actions/checkout@v3
+
+  #      - name: Setup Node.js
+  #        uses: actions/setup-node@v3
+  #        with:
+  #          node-version: '18'
 
       
-       - name: Install Dependencies for backend
-         working-directory: ./backend
-         run: npm install
+  #      - name: Install Dependencies for backend
+  #        working-directory: ./backend
+  #        run: npm install
 
-       - name: running backend Tests
-         working-directory: ./backend
-         run: npm test
+       
