--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,8 +19,8 @@ jobs:
              script: | 
               cd devops-mern-todo
               git pull origin main
-              docker compose down
-              docker compose up --build -d 
+              docker-compose down
+              docker-compose up --build -d 
 
            
         
